# db_gui

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
diagrams/: 01-przypadki-uzycia.puml  02-aktywnosc-polaczenie.puml  03-aktywnosc-zapytanie-sql.puml  04-aktywnosc-edycja-danych.puml  05-komponenty.puml  06-sekwencja-wykonanie-zapytania.puml  07-sekwencja-transakcja.puml  08-klasy-backend.puml  09-klasy-frontend.puml  10-stanow-aplikacji.puml  11-wdrozenie.puml  README.md
init-db/: 00-restore-dvdrental.sh  01-schema.sql  02-data.sql
src/: App.vue  main.ts  router.ts  shims-splitpanes.d.ts  stronghold.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connection.rs  lib.rs  main.rs  state.rs
src-tauri/src/db/: factory.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  traits.rs
src/components/common/: ColumnFilter.vue  DataGrid.vue  ThemeToggle.vue  ValueInspector.vue
src/components/data/: TableView.vue
src/components/designer/: SchemaCreator.vue  TableCreator.vue  TableDesigner.vue
src/components/editor/: SqlEditor.vue
src/components/export/: ExportDialog.vue
src/components/layout/: TabBar.vue  WorkspacePane.vue
src/services/: ContextMenuService.ts  DockingService.ts
src/stores/: connections.ts  history.ts  theme.ts  transaction.ts  workspace.ts
src/styles/: theme.css
src/utils/: app-menu.ts  monaco-config.ts  sql-generator.ts  system-tray.ts
src/views/: ConnectionsView.vue  DatabaseView.vue
(+4 files in other folders)
