[package]
name = "db_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "tls-native-tls",
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
dirs = "5"
tauri-plugin-stronghold = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
